--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -10,32 +10,10 @@ body {
 	font-family: 'Satisfy', cursive;
 }
 
-.album-tile {
-}
-
-.image-tile {
-	padding: 5px;
-	background: seagreen;
-}
-
-.image-tile img {
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-}
-
-.tile-details {
-	font-size: 20px;
-	font-family: 'Indie Flower', cursive;
-	text-align: justify;
-}
-
-.tile-details a:hover{
-	text-decoration: none;
-	color: #000000;
-
-}
-
 .glyphicon-star.active {
     color: #FDB230;
 }
+
+/*.caption a:hover{
+	text-decoration-style: none;
+}*/
