--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}Viberr{% endblock %}</title>
+	<title>{% block title %}Music DB{% endblock %}</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Supermercado+One" rel="stylesheet">
@@ -17,7 +17,7 @@
 
 <body>
 
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-inverse ">
 
 	  <div class="container-fluid">
 
@@ -30,7 +30,7 @@
 				<span class="icon-bar"></span>
 			</button>
 
-	    	<a class="navbar-brand" href="{% url 'music:index' %}">Viberr</a>
+	    	<a class="navbar-brand" href="{% url 'music:index' %}">Music DB</a>
 	    </div>
 
 		<!-- Items -->
@@ -42,8 +42,8 @@
 					</a>
 				</li>
 
-				<li class="">
-					<a href="#">
+				<li class="{% block songs_active %}{% endblock %}">
+					<a href="{% url 'music:songs' %}">
 						<span class="glyphicon glyphicon-music" area-hidden="true"></span>&nbsp; Songs
 					</a>
 				</li>
