--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-	<div class="container">
+	<div class="container" style="margin-top: 6%;">
 		<div class="row">
 			<div class="col-md-3">
 				<div class="panel panel-default">
