--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -2,7 +2,7 @@
 {% block index_active %}active{% endblock %}
 {% block body %}
 
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 6%;">
 	{% for album in all_albums %}
 
 
