--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -10,6 +10,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<script src="https://use.fontawesome.com/a774be0e44.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}" />
 
 
@@ -44,7 +47,7 @@
 
 				<li class="{% block songs_active %}{% endblock %}">
 					<a href="{% url 'music:songs' %}">
-						<span class="glyphicon glyphicon-music" area-hidden="true"></span>&nbsp; Songs
+						<i class="fa fa-spin fa-music" aria-hidden="true"></i>&nbsp; Songs
 					</a>
 				</li>
 			</ul>
